// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render 1`] = `
<View>
  <WeatherApp />
</View>
`;

exports[`DetailsScreen should render 1`] = `
<View>
  <Text>
    Details Screen
  </Text>
  <Button
    onPress={[Function]}
    title="Back to Home"
  />
</View>
`;

exports[`HomeScreen should render 1`] = `
<View>
  <Text>
    Home Screen
  </Text>
  <Button
    onPress={[Function]}
    title="Go to Details"
  />
</View>
`;
